# chat_app

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/models/: user.rs
src/tui/: main.rs  ui.rs
