[package]
name = "chat_app"
version = "0.1.0"
description = "chat TUI"
authors = ["dainz <mbenjaminarancibia@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.52.3", features = ["full"] }
color-eyre = "0.6.3"
serde = { version ="1.0.228", features = ["derive"]}
serde_json = "1.0.150"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[[bin]]
name = "user"
path = "src/models/user.rs"